--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,40 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <title>{% block title %}Compagnie d'arc{% endblock %}</title>
         {% block stylesheets %}
+            <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet">
+            {# <link href="{{ asset('assets/css/all.min.css') }}" rel="stylesheet"> #}
+            <link href="{{ asset('assets/css/style.css') }}" rel="stylesheet">
         {% endblock %}
 
         {% block javascripts %}
+            <script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
         {% endblock %}
+        {% block jsStripe %}{% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body class="bg-primary h-100">
+        {% block menu %}
+            {% include "menu.html.twig" %}
+        {% endblock %}
+        {% block carousel %}
+             
+        {% endblock %}
+        <h6 class="rounded border border-dark bg-info p-2 m-2 text-white">
+            {% block subtitle %}{% endblock %}
+        </h6>
+        <div class="container mx-auto fs-6 page-container ">
+            {% block body %}{% endblock %}
+        </div>
+        {% block footer %}
+            <footer class="col-12 foot position-fixed  bottom-0">
+                <p class="m-0 p-0">
+                    &copy; 1912-2023 Compagnie d'arc Jeanne Hachette-Beauvais<br>
+                    <small>La plus prestigieuse des compagnies des archers en France</small>
+                </p>
+            </footer>
+        {% endblock %}
     </body>
+    {% block script %}{% endblock %}
 </html>
