--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
         {% block jsStripe %}{% endblock %}
     </head>
-    <body class="bg-primary h-100">
+    <body class=" h-100">
         {% block menu %}
             {% include "menu.html.twig" %}
         {% endblock %}
