--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,7 +15,7 @@
     {% endif %}
 
     <div class="row d-flex">
-    <div class="col-4 border">   
+    <div class="col-4 ">   
     </div>
          <div class="col-4 ">
              <h1 class="h3 mb-3 font-weight-normal">SVP taper vos coordonnées</h1>
@@ -31,7 +31,7 @@
                 </button>
         
          </div>
-    <div class="col-4 border">   
+    <div class="col-4 ">   
     </div>
     </div>
 
