--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -3,21 +3,21 @@
 {% block title %}Catalogue{% endblock %}
 
 {% block body %}
-<div class="row text-center border ">
-    <div class="col-sm-9 border ">
+<div class="row text-center  ">
+    <div class="col-sm-9  ">
         <div class="row mt-5">   
             {% for product in products %}
-                <div class="col-md-4 border">
+                <div class="col-md-4 bg-white rounded-2 me-4 p-3 position-relative">
                     <a href="{{ path('product', { 'id' : product.id }) }}">
-                        <img class="img-fluid img-thumbnail rounded" alt="oups" src="/images/products/{{ product.image }}">
+                        <img class="img-fluid img-thumbnail h-50 w-50" alt="oups" src="/images/products/{{ product.image }}">
                     </a>
                     <br>
-                    <div class="d-flex flex-column border">
+                    <div class="d-flex flex-column  ">
                     <span>{{ product.name }}</span>
                     <span>{{ (product.price / 100)|number_format(2,',','.') }} €</span>
                     </div>
-                    <div class="row d-flex h-25 border justify-content-evenly text position-relative bottom-0 ">
-                    <a href="{{ path('ajouterPanier', { 'id' : product.id }) }}" class=" col-2 btn btn-success d-flex justify-content-center align-items-center">Ajouter</a>
+                    <div class="row d-flex h-25  justify-content-evenly text position-relative bottom-0 ">
+                    <a style="background:#ff7629" href="{{ path('ajouterPanier', { 'id' : product.id }) }}" class="position-absolute bottom-0 col-6 rounded-pill h-50 btn  d-flex justify-content-center align-items-center">Ajouter</a>
                     
                     </div>
                 </div>                
