--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -3,8 +3,8 @@
 </div>
 
 
-<nav style="color:white" class="navbar navbar-expand-lg text-black  >
-	    <div class=" container-fluid text-white ">
+<nav  class="navbar navbar-expand-lg text-black  >
+	    <div class=" container-fluid  ">
 	<a class="navbar-brand fs-6" href="{{ path('accueil') }}">Mon coin censeur</a>
 	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
