--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,7 +17,7 @@
     <div class="row d-flex">
     <div class="col-4 ">   
     </div>
-         <div class="col-4 ">
+         <div class="col-4 text-white">
              <h1 class="h3 mb-3 font-weight-normal">SVP taper vos coordonnées</h1>
                 <label for="inputEmail">Adresse électronique</label>
                 <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
