--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -2,7 +2,6 @@
 	{%include 'carouselText.html.twig'%}
 </div>
 
-
 <nav  class="navbar navbar-expand-lg text-black  >
 	    <div class=" container-fluid  ">
 	<a class="navbar-brand fs-6" href="{{ path('accueil') }}">Mon coin censeur</a>
@@ -75,3 +74,7 @@
 		</a>
 	</div>
 </div></nav>
+
+<div class="col-12 h-100 d-flex justify-content-center">
+	<img class="" src="images/products/FLStudio21_16x9.jpg" alt="images/product">
+</div>
