--- a/templates/carouselText.html.twig
+++ b/templates/carouselText.html.twig
@@ -1,8 +1,8 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide text-white" data-bs-ride="carousel">
 
     <div class="carousel-inner banner h-25 ">
         <div class="carousel-item  active">
-                        <p>POURQUOI§§§§§§§§§§§§</p>
+                        <p>Image-Line</p>
         {# <img src="{{ asset('assets/images/archer1.jpg') }}" class="d-block w-100" alt="..."> #}
         </div>
         <div class="carousel-item">
