--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -4,13 +4,13 @@
 
 <nav  class="navbar navbar-expand-lg text-black  >
 	    <div class=" container-fluid  ">
-	<a class="navbar-brand fs-6" href="{{ path('accueil') }}">Mon coin censeur</a>
-	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
+			<a class="navbar-brand fs-6" href="{{ path('accueil') }}">Mon coin censeur</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-	<div class="collapse navbar-collapse" id="navbarColor02">
-		<ul class="navbar-nav me-auto ">
+			<div class="collapse navbar-collapse" id="navbarColor02">
+				<ul class="navbar-nav me-auto ">
 			<li class="nav-item">
 				<a class="nav-link active fs-6" href="{{ path('catalogue') }}">
 					Catalogue
@@ -27,7 +27,7 @@
 				<a class="nav-link fs-6" href="#">A propos</a>
 			</li>
 			<!-- Menu item déroulant -->
-			<!-- <li class="nav-item dropdown">
+		    <li class="nav-item dropdown">
 			                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
 			                <div class="dropdown-menu">
 			                    <a class="dropdown-item" href="#">Action</a>
@@ -37,7 +37,7 @@
 			                    <a class="dropdown-item" href="#">Separated link</a>
 			                </div>
 			            </li> -->
-		</ul>
+				</ul>
 		{# <form class="d-flex">
 		            <input class="form-control me-sm-2" type="text" placeholder="ma recherche">
 		            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Rechercher</button>
@@ -73,7 +73,8 @@
 			</i>
 		</a>
 	</div>
-</div></nav>
+		</div>
+</nav>
 
 <div class="col-12 h-100 d-flex justify-content-center">
 	<img class="" src="images/products/FLStudio21_16x9.jpg" alt="images/product">
