--- a/templates/carouselText.html.twig
+++ b/templates/carouselText.html.twig
@@ -1,16 +1,15 @@
-<div id="carouselExampleIndicators" class="carousel slide text-white" data-bs-ride="carousel">
+<div  id="carouselExampleIndicators" class="carousel slide text-white " data-bs-ride="carousel">
 
-    <div class="carousel-inner banner h-25 ">
-        <div class="carousel-item  active">
-                        <p>Image-Line</p>
-        {# <img src="{{ asset('assets/images/archer1.jpg') }}" class="d-block w-100" alt="..."> #}
+    <div class="carousel-inner banner h-100 ">
+        <div class="carousel-item w-100 active">
+            <img style='height:40px' src='images/products/fruit-loops-en-espanol-fl-studio.png' class="d-block mx-auto h-100   " alt="...">
         </div>
-        <div class="carousel-item">
-                        <p>POURQUOI§§§§§§§§§§§§</p>
-        {# <img src="{{ asset('assets/images/archer2.jpg') }}" class="d-block w-100" alt="..."> #}
+        <div  class=" carousel-item  w-100">
+            <img style='height:40px' src='images/products/pro-tools-final-2.png' class="d-block mx-auto h-25   " alt="...">
         </div>
-        <div class="carousel-item">
-                        <p>POURQUOI§§§§§§§§§§§§</p>
+        <div class="carousel-item w-100">
+            <img style='height:40px' src='images/products/cubaseBan.png' class="d-block mx-auto h-25   " alt="...">
+                    
         {# <img src="{{ asset('assets/images/archer3.jpg') }}" class="d-block w-100" alt="..."> #}
         </div>
     </div>
