--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20,6 +20,9 @@
 .navbar-right .navbar-right a {
     color: white;
 }
+.navbar-nav .nav-link {
+    color:blue;
+}
 
 .foot p {
     text-align: center;
@@ -86,5 +89,8 @@
 
 .fs-6 {
     color: white;
+}
+.fs-6:hover{
+    color: blue;
 }
 
