--- a/templates/carousel.html.twig
+++ b/templates/carousel.html.twig
@@ -4,15 +4,18 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
+    <div class="carousel-inner h-100">
         <div class="carousel-item active">
-        <img src="{{ asset('assets/images/archer1.jpg') }}" class="d-block w-100" alt="...">
+       <img style='height:40px' src='images/products/FLStudio21_16x9.jpg' class="d-block mx-auto h-100   " alt="...">
         </div>
         <div class="carousel-item">
-        <img src="{{ asset('assets/images/archer2.jpg') }}" class="d-block w-100" alt="...">
+       <img style='height:40px' src='images/products/cubase.png' class="d-block mx-auto h-100   " alt="...">
+  
+      
         </div>
         <div class="carousel-item">
-        <img src="{{ asset('assets/images/archer3.jpg') }}" class="d-block w-100" alt="...">
+       <img style='height:40px' src='images/products/cubase.png' class="d-block mx-auto h-100   " alt="...">
+
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
