--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -4,15 +4,15 @@
 
 {% block body %}
 <div class="row text-center  ">
-    <div class="col-sm-9  ">
+    <div class="col-sm-12  ">
         <div class="row mt-5">   
             {% for product in products %}
-                <div style='box-shadow:1px 1px 13px 0px #ff7629;height:350px ;width:180px; ' class="card_catalogue col-md-4 bg-white m-4 p-3 position-relative ">
+                <div style='box-shadow:1px 1px 13px 0px #ff7629;height:350px ;width:250px; ' class="card_catalogue col-md-4 bg-white m-2 p-1 position-relative ">
                     <a href="{{ path('product', { 'id' : product.id }) }}">
-                        <img class="img-fluid img-thumbnail h-50 w-50" alt="oups" src="/images/products/{{ product.image }}">
+                        <img class="img-fluid img-thumbnail border-0 h-50 w-50" alt="oups" src="/images/products/{{ product.image }}">
                     </a>
                     <br>
-                    <div style="" class="d-flex flex-column mt-4 flex-wrap ">
+                    <div style="" class="d-flex flex-column mt-1 flex-wrap ">
                         <span style="color:#ff7629" >{{ product.name }}</span>
                         <span class="text-black" >{{ (product.price / 100)|number_format(2,',','.') }} €</span>
                     <div class="w-100 d-flex   justify-content-center  position-absolute bottom-0 p-0 m-0 ">
