--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,4 +1,4 @@
-<div class="banner text-center">
+<div  class="banner  text-center p-3">
 	{%include 'carouselText.html.twig'%}
 </div>
 
@@ -36,12 +36,9 @@
 			                    <div class="dropdown-divider"></div>
 			                    <a class="dropdown-item" href="#">Separated link</a>
 			                </div>
-			            </li> -->
+			            </li>
 				</ul>
-		{# <form class="d-flex">
-		            <input class="form-control me-sm-2" type="text" placeholder="ma recherche">
-		            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Rechercher</button>
-		        </form> #}
+
 		{% if app.user %}
 			<div class="fs-6">
 				<small class="mx-5">Bonjour
@@ -75,7 +72,7 @@
 	</div>
 		</div>
 </nav>
-
-<div class="col-12 h-100 d-flex justify-content-center">
-	<img class="" src="images/products/FLStudio21_16x9.jpg" alt="images/product">
+<div class="banner text-center">
+	{%include 'carousel.html.twig'%}
 </div>
+
