--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -7,7 +7,7 @@
     <div class="col-sm-12  ">
         <div class="row mt-5">   
             {% for product in products %}
-                <div style='box-shadow:1px 1px 13px 0px #ff7629;height:350px ;width:250px; ' class="card_catalogue col-md-4 bg-white m-2 p-1 position-relative ">
+                <div style='box-shadow:1px 1px 13px 0px #ff7629;height:350px ;width:250px; ' class="card_catalogue col-md-4 bg-white m-4 mx-auto p-1 position-relative ">
                     <a href="{{ path('product', { 'id' : product.id }) }}">
                         <img class="img-fluid img-thumbnail border-0 h-50 w-50" alt="oups" src="/images/products/{{ product.image }}">
                     </a>
