--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,8 +22,8 @@
         {% block carousel %}
              
         {% endblock %}
-        <h6 class="rounded border border-dark bg-info p-2 m-2 ">
-            {% block subtitle %}{% endblock %}
+        <h6 class="rounded border border-dark bg-info p-2 m-2 text-center ">
+            {% block subtitle %} Produits Images-Line{% endblock %}
         </h6>
         <div class="container mx-auto fs-6 page-container ">
             {% block body %}{% endblock %}
