--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,9 +22,9 @@
         {% block carousel %}
              
         {% endblock %}
-        <h6 class="rounded border border-dark bg-info p-2 m-2 text-center ">
+        {# <h6 class="rounded border border-dark bg-info p-2 m-2 text-center ">
             {% block subtitle %} Produits Images-Line{% endblock %}
-        </h6>
+        </h6> #}
         <div class="container mx-auto fs-6 page-container ">
             {% block body %}{% endblock %}
         </div>
