--- a/templates/carousel.html.twig
+++ b/templates/carousel.html.twig
@@ -1,29 +1,30 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner h-100">
-        <div class="carousel-item active">
-       <img style='height:40px' src='images/products/FLStudio21_16x9.jpg' class="d-block mx-auto h-100   " alt="...">
-        </div>
-        <div class="carousel-item">
-       <img style='height:40px' src='images/products/cubase.png' class="d-block mx-auto h-100   " alt="...">
-  
-      
-        </div>
-        <div class="carousel-item">
-       <img style='height:40px' src='images/products/cubase.png' class="d-block mx-auto h-100   " alt="...">
+	<div class="carousel-indicators">
+		<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+		<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+		<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+	</div>
+	<div class="carousel-inner h-100">
+		<div class="carousel-item active">
+			<img src='images/products/FLStudio21_16x9.jpg' class="d-block mx-auto h-100   " alt="...">
+		</div>
+		<div class="carousel-item">
+			<img src='images/products/cubase.png' class="d-block mx-auto    " alt="...">
 
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
+
+		</div>
+		<div class="carousel-item">
+			<img src='images/products/cubase.png' class="d-block mx-auto    " alt="...">
+
+		</div>
+	</div>
+	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Previous</span>
+	</button>
+	<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Next</span>
+	</button>
 </div>
+
