--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -3,20 +3,26 @@
 {% block title %}Catalogue{% endblock %}
 
 {% block body %}
+<div class="banner text-center">
+	{%include 'carousel.html.twig'%}
+</div>
+        <h6 style="background:#ff7629" class="rounded border border-dark  p-2 m-2 text-center  text-white">
+            {% block subtitle %} Produits Images-Line{% endblock %}
+        </h6>
 <div class="row text-center  ">
     <div class="col-sm-12  ">
         <div class="row mt-5">   
             {% for product in products %}
                 <div style='box-shadow:1px 1px 13px 0px #ff7629;height:350px ;width:250px; ' class="card_catalogue col-md-4 bg-white m-4 mx-auto p-1 position-relative ">
                     <a href="{{ path('product', { 'id' : product.id }) }}">
-                        <img class="img-fluid img-thumbnail border-0 h-50 w-50" alt="oups" src="/images/products/{{ product.image }}">
+                        <img style="position: relative;top:-49px;left: -65px;"  class="img-fluid img-thumbnail border-0 h-50 w-50" alt="oups" src="/images/products/{{ product.image }}">
                     </a>
                     <br>
                     <div style="" class="d-flex flex-column mt-1 flex-wrap ">
                         <span style="color:#ff7629" >{{ product.name }}</span>
                         <span class="text-black" >{{ (product.price / 100)|number_format(2,',','.') }} €</span>
                     <div class="w-100 d-flex   justify-content-center  position-absolute bottom-0 p-0 m-0 ">
-                    <a style="background:#ff7629" href="{{ path('ajouterPanier', { 'id' : product.id }) }}" class="btn-submit position-absolute bottom-0 col-6 rounded-pill  btn  d-flex justify-content-center align-items-center mb-3 ">Ajouter</a>
+                    <a style="background:#ff7629" href="{{ path('ajouterPanier', { 'id' : product.id }) }}" class="btn-submit position-absolute bottom-0 col-6 rounded-pill  btn  d-flex justify-content-center align-items-center mb-3 text-white ">Ajouter</a>
                     
                     </div>
                     </div>
