--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -72,7 +72,7 @@
 	</div>
 		</div>
 </nav>
-<div class="banner text-center">
+{# <div class="banner text-center">
 	{%include 'carousel.html.twig'%}
-</div>
+</div> #}
 
