--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,6 +1,6 @@
-<div  class="banner  text-center p-3">
+{# <div  class="banner  text-center p-3">
 	{%include 'carouselText.html.twig'%}
-</div>
+</div> #}
 
 <nav  class="navbar navbar-expand-lg text-black  >
 	    <div class=" container-fluid  ">
