--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -6,30 +6,48 @@
 <div class="banner text-center">
 	{%include 'carousel.html.twig'%}
 </div>
-        <h6 style="background:#ff7629" class="rounded border border-dark  p-2 m-2 text-center  text-white">
+        <h6 style="background:#ff7629 " class="rounded border border-dark  p-2 m-2 text-center  text-white fs-4 m-5">
             {% block subtitle %} Produits Images-Line{% endblock %}
         </h6>
 <div class="row text-center  ">
-    <div class="col-sm-12  ">
-        <div class="row mt-5">   
+    <div class="col-sm-12 mx-auto ">
+    <p class="">Trouvez l'edition et tous les plugging que vous souhaitez</p>
+    <p>Pourquoi FL-STUdio </p>
+    <span id="detail" class=" d-flex justify-content-center align-items-center ">
+    <p>
+    <svg " xmlns="http://www.w3.org/2000/svg"   height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>L'achat comprend des mises à jour gratuites à vie
+    </p>
+
+    <p>
+    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>Prise en charge de macOS et Windows
+    </p>
+
+    <p>
+    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>Version téléchargeable uniquement
+    </p>
+    
+    </span>
+        <div class="row mt-5">
+
+
             {% for product in products %}
 
 
                 <div style='box-shadow:1px 1px 13px 0px #ff7629;height:354px ;width:268px; background:#ff7629;' class="card_catalogue col-md-4  m-4 mx-auto p-1 rounded">
-                <div style='height:350px ;width:250px; ' class="card_catalogue col-md-4 bg-white m-4 mx-auto p-1 position-relative rounded-1">
-                    <a href="{{ path('product', { 'id' : product.id }) }}">
-                        <img style="position: relative;top:-52px;left:-64.5px;"  class="img-fluid img-thumbnail border-0 h-50 w-50" alt="oups" src="/images/products/{{ product.image }}">
-                    </a>
-                    <br>
-                    <div style="" class="d-flex flex-column mt-1 flex-wrap ">
-                        <span style="color:#ff7629" >{{ product.name }}</span>
-                        <span class="text-black" >{{ (product.price / 100)|number_format(2,',','.') }} €</span>
-                    <div class="w-100 d-flex   justify-content-center  position-absolute bottom-0 p-0 m-0 ">
-                    <a style="background:#ff7629" href="{{ path('ajouterPanier', { 'id' : product.id }) }}" class="btn-submit position-absolute bottom-0 col-6 rounded-pill  btn  d-flex justify-content-center align-items-center mb-3 text-white ">Ajouter</a>
-                    
-                    </div>
-                    </div>
-                </div> 
+                        <div style='height:350px ;width:250px; ' class="card_catalogue col-md-4 bg-white m-4 mx-auto p-1 position-relative rounded-1">
+                            <a href="{{ path('product', { 'id' : product.id }) }}">
+                                <img style="position: relative;top:-50px;left:-64.5px; "  class="img-fluid img-thumbnail border-0 h-50 w-50 " alt="oups" src="/images/products/{{ product.image }}">
+                            </a>
+                            <br>
+                            <div style="" class="d-flex flex-column mt-1 flex-wrap ">
+                                <span style="color:#ff7629" >{{ product.name }}</span>
+                                <span class="text-black" >{{ (product.price / 100)|number_format(2,',','.') }} €</span>
+                            <div class="w-100 d-flex   justify-content-center  position-absolute bottom-0 p-0 m-0 ">
+                            <a style="background:#ff7629" href="{{ path('ajouterPanier', { 'id' : product.id }) }}" class="btn-submit position-absolute bottom-0 col-6 rounded-pill  btn  d-flex justify-content-center align-items-center mb-3 text-white ">Ajouter</a>
+                            
+                            </div>
+                            </div>
+                        </div> 
                 </div>               
             {% endfor %}
         </div>
