--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -27,7 +27,7 @@
 				<a class="nav-link fs-6" href="#">A propos</a>
 			</li>
 			<!-- Menu item déroulant -->
-		    <li class="nav-item dropdown">
+		    {# <li class="nav-item dropdown">
 			                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
 			                <div class="dropdown-menu">
 			                    <a class="dropdown-item" href="#">Action</a>
@@ -36,7 +36,7 @@
 			                    <div class="dropdown-divider"></div>
 			                    <a class="dropdown-item" href="#">Separated link</a>
 			                </div>
-			            </li>
+			</li> #}
 				</ul>
 
 		{% if app.user %}
