--- a/templates/catalogue/detailsProduct.html.twig
+++ b/templates/catalogue/detailsProduct.html.twig
@@ -4,21 +4,31 @@
 
 {% block body %}
 <div class="row text-center">
-    <div class="col-sm-9">
-        <div class="row mt-5">        
-            <div class="col-md-8">
-                <img class="img-fluid img-thumbnail rounded" alt="oups" src="/images/products/{{ product.image }}">
-            </div>
-            <div class="col-md-4">
-                <span>{{ product.name }}</span>
-                <br>
-                <span>{{ product.subtitle }}</span>
-                <br>
-                <span>{{ product.description }}</span>
-                <br>
-                <span>{{ (product.price / 100)|number_format(2,',','.') }} €</span>
-                <br>
-                <a href="#" class="btn btn-primary">Ajouter au panier</a>
+    <div class="col-sm-9 rounded position-absolute top-50 start-50 translate-middle"">
+        <div class="mt-5 d-flex flex-column justify-content-center align-items-center position-relative">        
+            <div style="height:500px; width:50%;" class="col-md-4 text-black bg-white position-relative">
+
+                    <div class="col-md-8 position-absolute top-0 start-50 translate-middle">
+                            <img class="img-fluid img-thumbnail rounded" alt="oups" src="/images/products/{{ product.image }}">
+                    </div>
+                    <div style="color:#ff7629;position:absolute; top:120px; left:50%;transform:translate(-50%)">
+                        <span class="fs-3">{{ product.name }}</span>
+                    </div>
+                <div style="position:absolute; top:60%;left:50%;height:30%;width:100%;transform:translate(-50%,-50%)">
+                        <br>
+                    <div class="border bg-dark position-absolute top-0">
+                            <span style="font-size: xx-large; margin-bottom: 20px; color: white;">{{ product.subtitle }}</span>
+                            <br>
+                            <span style="font-size:large; margin-top:20px; color:#ff7629">{{ product.description }}</span>
+                            <br>
+                    </div>
+                </div>
+                <div class="w-100  position-absolute bottom-0 start-50 translate-middle">
+                    <span class="w-25 fs-5 fw-bold ">{{ (product.price / 100)|number_format(2,',','.') }} €</span>
+                    <br>
+                    <a  style=" background-color:#ff7629"href="#" class="btn mt-2 ">Ajouter au panier</a>
+                
+                </div>
             </div>
         </div>
     </div>
