--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -3,5 +3,44 @@
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
-    
+    <article class="border d-flex flex-column justify-content-center align-items-center">
+        <img src="images/products/FLStudio21.1.jpg" alt="">
+        <p class="mt-5 w-50">
+             FL STUDIO 21.1 | Nous sommes ravis de la sortie de FL Studio 21.1. Ajout
+             d’une édition de notes plus rapide et plus créative avec des outils de capture 
+             d’échelle et de note personnalisée dans le clavier. Formes d’onde colorées pour
+             une meilleure gestion des échantillons. Un plugin de chorus extrême, “Hyper Chorus”,
+             AI Declipper dans Edison et bien plus encore. Tout cela parce que nous vous aimons
+             Lifetime Free Updates!
+        </p>
+        <div>
+            <h6>FL Studio</h6>
+            <p>Formes d’onde colorées - Option de paramètres généraux pour colorer le contenu de fréquence de code dans les formes d’onde audio. Cela s’applique au navigateur, à la liste de lecture, au canal de l’échantillonneur, etc.</p>
+            <p>Contrôle MIDI - Nouveau mode de synchronisation externe et stabilité de l’horloge maître MIDI améliorée. Cela permet à FL Studio de 'asservir' une horloge MIDI externe afin qu’elle joue à temps sur une source d’horloge MIDI externe..</p>
+            <p>Mises à jour automatisées - Option pour télécharger automatiquement les mises à jour de FL Studio et les appliquer au prochain redémarrage.</p>
+            <h6>Piano roll</h6>
+            <p>Aligner sur l’échelle - Option de clavier pour aligner les notes sur l’échelle sélectionnée lors du placement ou du mouvement. Voir l’icône de note dans la barre d’outils.</p>
+            <p>Menu > Outils > Script - Les scripts sont basés sur Python qui permet une manipulation personnalisée des données du clavier. Il existe plusieurs scripts prédéfinis ou vous pouvez écrire les vôtres. Le script inclut également la création automatique d’interface utilisateur. Voir le forum de script de piano roll pour partager et discuter des scripts.</p>
+            <h6>Piano roll</h6>
+            <p> Nouveaux Pluging et mis à jour</p>
+            <p>Hyper Chorus - Extreme chorus FX plugin, inclus avec Producer Edition et plus.</p>
+            <p>Edison Declipper - Nouvel outil de décélération amélioré basé sur l’IA. Peut restaurer les enregistrements qui ont été coupés en raison de problèmes de niveau.</p>
+            <p>SliceX - Maintenant redimensionnable en faisant glisser le coin inférieur droit.</p>
+        </div>
+
+    </article>
+    <article class="border d-flex flex-column justify-content-center align-items-center">
+        <img src="images/products/LovePhilter_Splash.jpg" alt="">
+        <img src="images/products/slicex_splash.jpg" alt="">
+        <img src="images/products/FLkey.jpg" alt="">
+        <p class="mt-5 w-50">
+             FL STUDIO 21.1 | Nous sommes ravis de la sortie de FL Studio 21.1. Ajout
+             d’une édition de notes plus rapide et plus créative avec des outils de capture 
+             d’échelle et de note personnalisée dans le clavier. Formes d’onde colorées pour
+             une meilleure gestion des échantillons. Un plugin de chorus extrême, “Hyper Chorus”,
+             AI Declipper dans Edison et bien plus encore. Tout cela parce que nous vous aimons
+             Lifetime Free Updates!
+        </p>
+
+    </article>
 {% endblock %}
