--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -29,10 +29,20 @@
         </div>
 
     </article>
+    <article class="col-12 border d-flex align-items-center mb-5">
+        <img class="w-50" src="images/products/155226-large.jpg" alt="">
+        <p style="font-size:1.5em" class="col-4 text-start mx-auto ">
+            En tant que compositeur, ma tâche la plus difficile est de traduire les idées de ma tête dans un DAW.
+              Cubase se sent comme une extension de mon cerveau et me permet de créer facilement la musique de mon imagination.
+        </p>
+    </article>
     <article class="border d-flex flex-column justify-content-center align-items-center">
-        <img src="images/products/LovePhilter_Splash.jpg" alt="">
-        <img src="images/products/slicex_splash.jpg" alt="">
-        <img src="images/products/FLkey.jpg" alt="">
+        <div class="d-flex border w-75 justify-content-around">
+            <img src="images/products/LovePhilter_Splash.jpg" alt="">
+            <img src="images/products/slicex_splash.jpg" alt="">
+            <img src="images/products/FLkey.jpg" alt="">
+
+        </div>
         <p class="mt-5 w-50">
              FL STUDIO 21.1 | Nous sommes ravis de la sortie de FL Studio 21.1. Ajout
              d’une édition de notes plus rapide et plus créative avec des outils de capture 
@@ -43,4 +53,25 @@
         </p>
 
     </article>
+<article class="col-12">
+
+    <div style="width:100%;display:flex;justify-content:space-between;">
+        <img style="width:49% ; margin-top:25px" src="images/products/132357-large.jpg" alt="">
+        <img style="width:49% ; margin-top:25px" src="images/products/115175-large.jpg" alt="">
+    </div>
+    <div style="width:100%;display:flex;justify-content:space-between;">
+        <img style="width:29% ; margin-top:25px" src="images/products/145124-large.jpg" alt="">
+        <img style="width:69% ; margin-top:25px" src="images/products/99095-large.jpg" alt="">
+    </div>
+
+    <div style="width:100%;display:flex;justify-content:space-between;">
+        <img style="width:49%" src="images/products/99098-large.jpg" alt="">
+        <img style="width:49%" src=" images/products/99101-large.jpg" alt="">
+    </div>
+ 
+
+
+
+
+</article>
 {% endblock %}
