--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -88,7 +88,11 @@
 .fs-6 {
     color: white;
 }
+
 /* .fs-6:hover{
     color: orange;
 } */
-
+article img#img1:hover {
+    cursor: pointer;
+    background: #000;
+}
