--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -16,7 +16,7 @@
         </span>
 
 
-        <div  class="mt-5 w-50 d-flex  border flex-wrap">
+        <div  class="mt-5 w-75 d-flex  border flex-wrap">
 
             
             
@@ -107,7 +107,7 @@
         </p>
 
     </article>
-<article class="col-12">
+<article class="w-75 mx-auto">
                     <h3 style="font-size:2.5em; font-weight:bold">Le monde de Fruty Loops</h3>
     <div style="width:100%;display:flex;justify-content:space-between;">
         <a class="icon-link-hover"href="#" style="width:49%">
