--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -16,12 +16,12 @@
         </span>
 
 
-        <div  class="mt-5 w-75 d-flex  border flex-wrap">
+        <div  class="mt-5 w-75 d-flex   flex-wrap">
 
             
             
             
-            <div  style="width:50%" class="border ">
+            <div  style="width:50%" class=" ">
                 <h5 style="color:#ff7629">FL Studio</h5>
     
                 <div>
@@ -46,7 +46,7 @@
 
             </div>
 
-            <div  style="width:50%" class="border ">
+            <div  style="width:50%" class=" ">
                 <h5 style="color:#ff7629">Piano roll</h5>
                 <div>
 
@@ -61,7 +61,7 @@
                 </div>
 
             </div>
-            <div class="border">
+            <div class="">
 
                 <h5 style="color:#ff7629">Piano roll</h5>
                 <div>
