--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -200,12 +200,25 @@ article img#img1:hover {
 
 .image:hover {
     transform: scale(1.4);
-    transition:all 0.7s ease-in-out;
+    transition:all 0.4s ease-in-out;
     /* width: 100%; */
     /* height: 120%; */
     font-size: 2.2em;
     opacity: 0.4;
     /* transition: background-size 1.2s; */
+}
+.article_acceuil{
+    column-rule: red;
+}
+#article{
+    margin:0 auto;
+    height: 100vh;
+
+}
+#article2{
+    margin:0 auto;
+    height: 200vh;
+
 }
 
 /* .image>span {
@@ -237,3 +250,9 @@ position: relative;
     filter: blur(1px);
 
 } */
+nav.navbar{
+    width: 100%;
+background-color: #16182c;
+position: fixed;
+z-index: 2000;
+}
