--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -6,102 +6,136 @@
 {% block body %}
 
 
-	<article class="d-flex flex-column justify-content-center align-items-center">
-		<img src="images/products/FLStudio21.1.jpg" alt="">
-		<span class="mt-5 w-50">
-			<h5 style="color:#ff7629">FL STUDIO 21.1 |</h5>
+	<article  class="d-flex  flex-column justify-content-center align-items-center">
+		<img class="m-5"  src="images/products/FLStudio21.1.jpg" alt="">
+		<div id="article" class="mt-5 w-50 ">
+			<h5 class="m-5" style="color:#ff7629">FL STUDIO 21.1 |</h5>
+			<p>
 			Nous sommes ravis de la sortie de FL Studio 21.1.
-			<br>
-			Ajout
-																																	             d’une édition de notes plus rapide et plus créative avec des outils de capture 
-																																	             d’échelle et de note personnalisée dans le clavier. Formes d’onde colorées pour
-																																	             une meilleure gestion des échantillons. Un plugin de chorus extrême, “Hyper Chorus”,
-																																	             AI Declipper dans Edison et bien plus encore. Tout cela parce que nous vous aimons
-																																	             Lifetime Free Updates!
-		</span>
+			</p>
+			<p>
+			Ajout d’une édition de notes plus rapide et plus créative ,
+			</p>
+			<p>
+			 avec des outils de capture d’échelle et de note personnalisée dans le clavier.
+			</p>
+			<p>
+			Formes d’onde colorées pour une meilleure gestion des échantillons.
+			</p>
+			<p>
+			Un plugin de chorus extrême, “Hyper Chorus”,
+			</p>
+			<p>
+			AI Declipper dans Edison et bien plus encore.
+			</p>
+			<p>
+			 Tout cela parce que nous vous aimons Lifetime Free Updates!
+			</p>
+	
+		
+             
+		     
+			
+			
+																																	             
+		</div>
 
 
-		<div class="mt-5 w-75 d-flex   flex-wrap">
-
-
-			<div style="width:50%" class=" ">
+		<div id="article2" class="mt-5 w-100 d-flex flex-column mx-auto ">
+			<h5 class="text-center">Quoi de neuf dans FL STUDIO 21.1</h5>
+			<div class="mt-5 w-100 d-flex justify-content-center ">
+			<div  class="article_acceuil  col-3 m-2 border-start ps-3">
 				<h5 style="color:#ff7629">FL Studio</h5>
 
 				<div>
 
-					<h6>Formes d’onde colorées -</h6>
-					<p>Option de paramètres généraux pour colorer le contenu de fréquence de code dans les formes d’onde audio. Cela s’applique au navigateur, à la liste de lecture, au canal de l’échantillonneur, etc.</p>
+					<h6 class="ml3">Formes d’onde colorées -</h6>
+					<p class="ml3">Option de paramètres généraux pour colorer le contenu de fréquence de code dans les formes d’onde audio. Cela s’applique au navigateur, à la liste de lecture, au canal de l’échantillonneur, etc.</p>
 				</div>
 
 
 				<div>
-					<h6>Contrôle MIDI -
+					<h6 class="ml3">Contrôle MIDI -
 					</h6>
-					<p>Nouveau mode de synchronisation externe et stabilité de l’horloge maître MIDI améliorée. Cela permet à FL Studio de 'asservir' une horloge MIDI externe afin qu’elle joue à temps sur une source d’horloge MIDI externe..</p>
+					<p class="ml3">Nouveau mode de synchronisation externe et stabilité de l’horloge maître MIDI améliorée. Cela permet à FL Studio de 'asservir' une horloge MIDI externe afin qu’elle joue à temps sur une source d’horloge MIDI externe..</p>
 
 				</div>
 
 
 				<div>
-					<h6>Mises à jour automatisées -</h6>
-					<p>Option pour télécharger automatiquement les mises à jour de FL Studio et les appliquer au prochain redémarrage.</p>
+					<h6 class="ml3">Mises à jour automatisées -</h6>
+					<p class="ml3">Option pour télécharger automatiquement les mises à jour de FL Studio et les appliquer au prochain redémarrage.</p>
 
 				</div>
 
 			</div>
 
-			<div style="width:50%" class=" ">
-				<h5 style="color:#ff7629">Piano roll</h5>
+			<div class="article_acceuil   col-3 m-2 border-start ps-3">
+				<h5 style="color:#ff7629" class="ml3">Piano roll</h5>
 				<div>
 
-					<h6>Aligner sur l’échelle -</h6>
-					<p>Option de clavier pour aligner les notes sur l’échelle sélectionnée lors du placement ou du mouvement. Voir l’icône de note dans la barre d’outils.</p>
+					<h6 class="ml3">Aligner sur l’échelle -</h6>
+					<p class="ml3">Option de clavier pour aligner les notes sur l’échelle sélectionnée lors du placement ou du mouvement. Voir l’icône de note dans la barre d’outils.</p>
 
 				</div>
 				<div>
-					<h6>Menu > Outils > Script -</h6>
-					<p>
+					<h6 class="ml3">Menu > Outils > Script -</h6>
+					<p class="ml3">
 						Les scripts sont basés sur Python qui permet une manipulation personnalisée des données du clavier. Il existe plusieurs scripts prédéfinis ou vous pouvez écrire les vôtres. Le script inclut également la création automatique d’interface utilisateur. Voir le forum de script de piano roll pour partager et discuter des scripts.</p>
 
 				</div>
 
 			</div>
-			<div class="">
+			<div class="article_acceuil  col-3 m-2 border-start ps-3">
 
 				<h5 style="color:#ff7629">Piano roll</h5>
 				<div>
-					<p>
+					<p class="ml3">
 						Nouveaux Pluging et mis à jour</p>
-					<h6>Hyper Chorus -</h6>
+					<h6 class="ml3">Hyper Chorus -</h6>
 					<p>Extreme chorus FX plugin, inclus avec Producer Edition et plus.</p>
 
 				</div>
 				<div>
 
-					<h6>Edison Declipper -</h6>
-					<p>Nouvel outil de décélération amélioré basé sur l’IA. Peut restaurer les enregistrements qui ont été coupés en raison de problèmes de niveau.</p>
+					<h6 class="ml3">Edison Declipper -</h6>
+					<p class="ml3">Nouvel outil de décélération amélioré basé sur l’IA. Peut restaurer les enregistrements qui ont été coupés en raison de problèmes de niveau.</p>
 
 				</div>
 				<div>
 
-					<h6>SliceX -</h6>
-					<p>Maintenant redimensionnable en faisant glisser le coin inférieur droit.</p>
+					<h6 class="ml3">SliceX -</h6>
+					<p class="ml3">Maintenant redimensionnable en faisant glisser le coin inférieur droit.</p>
 				</div>
+			</div>
 			</div>
 		</div>
 
 	</article>
+		<article id="article" class=" p-3 my-5">
+			<h5 class="text-center mb-5">FL STUDIO | Conçu pour le musicien en vous</h5>
+			<div class="d-flex justify-content-center align-items-center" >
+					<p>Avec plus de 25 ans de développement continu, FL STUDIO est devenu le 
+						« moyen le plus rapide de votre cerveau à vos enceintes » pour bon nombre des meilleurs DJ
+						et producteurs du monde. De l'utilisation de l'essai FL Studio dans leur chambre
+						à l'atterrissage sur les plus grandes scènes du monde. Est-ce votre tour ? 
+						Notre version d'essai vous permet de créer et d'enregistrer des projets, 
+						puis de les exporter vers des formats audio comme MP3 et WAV, 
+						à être partagés avec le monde. Jusqu’où FL Studio vous mènera-t-il ?
+					</p>
+					<img class="col-6" src="images\products\flstudio-powerUser-image-cloud.png" alt="">
+			</div>
+		</article>
 
-
-	<article class="col-12  d-flex align-items-center m-5">
+	<article id="article" class="col-12  d-flex align-items-center m-5">
 		<img class="w-50" src="images/products/155226-large.jpg" alt="">
 		<p style="font-size:1.5em" class="col-4 text-start mx-auto ">
 			En tant que compositeur, ma tâche la plus difficile est de traduire les idées de ma tête dans un DAW.
 																																	              Fruty-loops se sent comme une extension de mon cerveau et me permet de créer facilement la musique de mon imagination.
 		</p>
 	</article>
-	<article class="d-flex flex-column justify-content-center align-items-center">
-		<div class="d-flex w-75 justify-content-around">
+	<article id="article" class="d-flex flex-column justify-content-center align-items-center ">
+		<div class="d-flex w-100 justify-content-around  ">
 			<img src="images/products/LovePhilter_Splash.jpg" alt="">
 			<img src="images/products/slicex_splash.jpg" alt="">
 			<img src="images/products/FLkey.jpg" alt="">
@@ -112,8 +146,8 @@
 	</article>
 
 
-	<article class="mosaique">
-		<h3 style="font-size:2.5em; font-weight:bold">Le monde de Fruty Loops</h3>
+	<article  class="mosaique">
+		<h3 style="font-size:2.5em; font-weight:bold" class="mb-5">Le monde de Fruty Loops</h3>
 
 
 		<div class="d-flex  flex-column w-100">
