--- a/templates/catalogue/detailsProduct.html.twig
+++ b/templates/catalogue/detailsProduct.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="row text-center">
-    <div style=" position:absolute; top:55% ;left:50%;transform:translate(-50%,-50%)">
+    <div style=" position:a; top:55% ;left:50%;transform:translate(-50%,-50%)">
         <div class="mt-5 d-flex flex-column justify-content-center align-items-center position-relative">        
             <div style="height:700px; width:400px;" class="col-md-4 text-black bg-white position-relative">
 
